# real-time-voice-translator

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Project Demo Video Link  README.md  REPORT.md  app.py  bug_report.md  main.py  pyproject.toml  requirements.txt  user-acquisition-strategy.md
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: default.md
